--- a/Pipfile
+++ b/Pipfile
@@ -6,14 +6,23 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "*"
-django-environ = "*"
-psycopg2 = "*"
-django-cryptography = "*"
-coverage = "*"
-gunicorn = "*"
-django-heroku = "*"
-whitenoise = "*"
+django-environ = "==0.4.5"
+psycopg2 = "==2.8.5"
+django-cryptography = "==1.0"
+coverage = "==5.2.1"
+gunicorn = "==20.0.4"
+django-heroku = "==0.3.1"
+whitenoise = "==5.2.0"
+asgiref = "==3.2.10"
+cffi = "==1.14.2"
+cryptography = "==3.1"
+dj-database-url = "==0.5.0"
+django-appconf = "==1.0.4"
+pycparser = "==2.20"
+pytz = "==2020.1"
+six = "==1.15.0"
+sqlparse = "==0.3.1"
+Django = "==3.1.1"
 
 [requires]
 python_version = "3.8"
